# TeamA

./: .dockerignore  .env.example  .gitignore  AGENTS.md  JAMISSUE_CODE_REVIEW_KR.md  README.md  index.html  package-lock.json  package.json  vitest.config.ts
backend/: .dev.vars.example  .dockerignore  .env.example  .wranglerignore  Dockerfile  README.md  README.worker.md  pyproject.toml  requirements.local.txt  worker_entry.py  worker_shell.py  wrangler.shell.toml  wrangler.toml
backend/app/: api_deps.py  config.py  db.py  db_models.py  jwt_auth.py  main.py  models.py  naver_oauth.py  notification_broker.py  notification_bus.py  public_event_api.py  public_event_models.py  repository.py  repository_normalized.py  repository_support.py  repository_support_comments.py  repository_support_geo.py  repository_support_parsing.py  repository_support_serializers.py  repository_support_time.py  seed.py  seed_data.py  startup.py  storage.py  user_routes.py  user_routes_normalized.py
backend/app/db_model_defs/: __init__.py  auth_models.py  (+4 more)
backend/scripts/: generate_supabase_seed.py  print-worker-secret-commands.ps1
backend/sql/: schema.sql  supabase_schema.sql  supabase_seed.sql  supabase_storage.sql
backend/tests/: conftest.py  test_admin_service.py  test_auth_service.py  test_bootstrap_service.py  test_config_db.py  test_jwt_auth.py  test_notification_service.py  test_page_service.py  test_public_data_service.py  test_public_event_service.py  test_repository.py  test_review_service.py  test_service_facades.py  test_startup.py  test_storage.py  test_user_routes.py
(+362 files in other folders)
