[project]
name = "jamissue-worker"
version = "0.1.0"
description = "JamIssue FastAPI worker pilot"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "pydantic-settings==2.7.0",
  "SQLAlchemy==2.0.36",
  "PyMySQL==1.1.1",
  "psycopg==3.2.9",
  "itsdangerous==2.2.0",
  "PyJWT==2.10.1",
  "python-multipart==0.0.20",
]

[dependency-groups]
dev = [
  "workers-py>=1.9.0",
  "workers-runtime-sdk>=1.1.0",
  "pytest==8.3.4",
]